--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,7 +196,7 @@ p.signed {
     text-align: center;
 }
 
-footer.footer {
+footer {
     max-width: none;
     text-align: right;
     z-index: 10;
@@ -205,7 +205,16 @@ footer.footer {
     height: 60px;
     line-height: 60px;
     background-color: #f5f5f5;
-    margin: 120px 0 0 0;
+    margin: 60px 0 0 0;
+}
+.footer-links li a {
+    padding: 5px 10px;
+}
+.footer-links li a:after {
+    content: '|';
+}
+.footer-links li a:last-child:after {
+    content: '';
 }
 
 .login .btn {
